--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=event-management-system
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5434/demo
 spring.datasource.username=postgres
